# vedx64

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
examples/: analysis_example.cpp  assembler_example.cpp  branch_follow_example.cpp  codegen_example.cpp  core_example.cpp  emu_example.cpp  hook_example.cpp  instruction_example.cpp  ir_example.cpp  relocation_example.cpp  semantics_example.cpp  symx_example.cpp
include/: vedx64.hpp
include/vedx64/: analysis.hpp  assembler.hpp  branch_follow.hpp  codegen.hpp  core.hpp  emu.hpp  encoding_id.hpp  hook.hpp  instruction.hpp  ir.hpp  mnemonic.hpp  operand.hpp  relocation.hpp  semantics.hpp  symx.hpp  syscall.hpp
lib/assembler/: assembler.cpp
lib/branch_follow/: branch_follow.cpp
lib/core/: decode.cpp  disasm.cpp  encode.cpp  encoding_id.cpp  instruction.cpp  table.cpp
lib/emu/: emu.cpp
lib/hook/: hook.cpp
lib/ir/: ir.cpp
lib/relocation/: relocation.cpp
lib/semantics/: semantics.cpp
lib/symx/: symx.cpp
lib/syscall/: syscall.cpp
python/: example_vedx64.py  pybind.cpp  setup.py  test_vedx64.py
rust/: Cargo.toml  bridge.cpp  build.rs  vedx64_bridge.h
rust/src/: lib.rs
rust/vedx64/: Cargo.toml  build.rs
rust/vedx64/src/: bridge.rs  lib.rs  vedx64_bridge.cpp  vedx64_bridge.hpp
tests/: analysis_test.cpp  assembler_test.cpp  avx512_test.cpp  branch_follow_test.cpp  codegen_test.cpp  core_test.cpp  edge_case_test.cpp  emu_test.cpp  hook_test.cpp  instruction_test.cpp  ir_test.cpp  relocation_test.cpp  semantics_test.cpp  symx_test.cpp
tools/: CMakeLists.txt  asm.cpp  disasm.cpp  instrgen.cpp
